// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="left"
  shrunk={true}
  width="100%"
>
  <styled.div
    align="left"
    shrunk={true}
    width="100%"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with align center 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="center"
  shrunk={true}
  width="100%"
>
  <styled.div
    align="center"
    shrunk={true}
    width="100%"
  >
    <StyledComponent
      align="center"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with align left 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="left"
  shrunk={true}
  width="100%"
>
  <styled.div
    align="left"
    shrunk={true}
    width="100%"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with align right 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="right"
  shrunk={true}
  width="100%"
>
  <styled.div
    align="right"
    shrunk={true}
    width="100%"
  >
    <StyledComponent
      align="right"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with shrunk false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: initial;
  text-overflow: initial;
  overflow: initial;
  white-space: initial;
}

<TableCell
  align="left"
  shrunk={false}
  width="100%"
>
  <styled.div
    align="left"
    shrunk={false}
    width="100%"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={false}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with shrunk true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="left"
  shrunk={true}
  width="100%"
>
  <styled.div
    align="left"
    shrunk={true}
    width="100%"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;

exports[`TableCell should render correctly with width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-basis: 20%;
  -ms-flex-preferred-size: 20%;
  flex-basis: 20%;
}

.c0 > * {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<TableCell
  align="left"
  shrunk={true}
  width="20%"
>
  <styled.div
    align="left"
    shrunk={true}
    width="20%"
  >
    <StyledComponent
      align="left"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: ",
              [Function],
              ";
  align-items: center;
  min-width: 0;
  flex-basis: ",
              [Function],
              ";

  & > * {
    display: ",
              [Function],
              ";
    text-overflow: ",
              [Function],
              ";
    overflow: ",
              [Function],
              ";
    white-space: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shrunk={true}
      width="20%"
    >
      <div
        className="c0"
        width="20%"
      >
        MyTableCell
      </div>
    </StyledComponent>
  </styled.div>
</TableCell>
`;
